# messenger

./: .gitmodules  CMakeLists.txt  README.md  api.md  protocol.md
cmake/: MessengerConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/: client.h  config.h.in  connection.h  map.h  messenger.h  messenger.hpp  messenger_base.h  server.h
include/messenger/: base.h  client.h  connection.h  map.h  message.h  messenger_base.h  messenger_string.h  protocol_ws.h  server.h  session.h  wire_protocol.h
include/test/: test_kit.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  messenger.cpp  messenger_capi.c  test.cpp
src/main/messenger/: CMakeLists.txt  base.c  base.cpp  client.c  connection.c  map.c  message.c  message.cpp  protocol_ws.cpp  server.c  session.c  session.cpp
src/main/trial_and_error/: CMakeLists.txt  main.c
src/test/: CMakeLists.txt  core.test.cpp  test_kit.cpp
